FIX: ensures chat-thread is not overflowing

--- a/plugins/chat/assets/stylesheets/common/chat-side-panel.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-side-panel.scss
@@ -8,7 +8,6 @@
 
 .chat-side-panel {
   grid-area: threads;
-  min-height: 100%;
   box-sizing: border-box;
   border-left: 1px solid var(--primary-low);
   position: relative;
